added kml loading via brige. also some abstract classes for layers and bridges

--- a/app/src/main/assets/cesiumHelloWorld.html
+++ b/app/src/main/assets/cesiumHelloWorld.html
@@ -46,6 +46,7 @@
 <script src="GimelGimel/VectorLayer.js"></script>
 <script src="GimelGimel/LayersManager.js"></script>
 <script src="GimelGimel/GGViewer.js"></script>
+<script src="GimelGimel/KMLLayer.js"></script>
 
 
 <script>
