added CameraManager.js and GGinit.js. CameraManager is for zooming and reading camera position.
added zoomTo with PointGeometry. And constructor for 3d point. (default altitue = 0).

added startup position in prefernces.

--- a/app/src/main/assets/cesiumHelloWorld.html
+++ b/app/src/main/assets/cesiumHelloWorld.html
@@ -47,10 +47,12 @@
 <script src="GimelGimel/LayersManager.js"></script>
 <script src="GimelGimel/GGViewer.js"></script>
 <script src="GimelGimel/KMLLayer.js"></script>
+<script src="GimelGimel/CameraManager.js"></script>
+<script src="GimelGimel/GGinit.js"></script>
 
 
 <script>
-    GG.layerManager = new GG.Layers.LayersManager(GG.viewer);
+
 
 </script>
 </body>
