Added getLastTouchLocation functionality to GGMapView. Implemented getLastTouchedLocation functionality for CesiumMapView. Includes both java and js code.

--- a/app/src/main/assets/cesiumHelloWorld.html
+++ b/app/src/main/assets/cesiumHelloWorld.html
@@ -44,9 +44,10 @@
 
 <script src="GimelGimel/Utils.js"></script>
 <script src="GimelGimel/VectorLayer.js"></script>
-<script src="GimelGimel/LayersManager.js"></script>
-<script src="GimelGimel/GGViewer.js"></script>
 <script src="GimelGimel/KMLLayer.js"></script>
+<script src="GimelGimel/LayersManager.js"></script>
+<script src="GimelGimel/AndroidAPI.js"></script>
+<script src="GimelGimel/GGBootstrap.js"></script>
 
 
 <script>
