--- a/app/src/main/assets/cesiumHelloWorld.html
+++ b/app/src/main/assets/cesiumHelloWorld.html
@@ -22,6 +22,10 @@
             overflow: hidden;
         }
 
+        #creditContainer{
+            visibility: hidden;
+        }
+
         #extra-func {
             position: absolute;
             bottom: 0px;
@@ -41,6 +45,7 @@
 </head>
 <body>
 <div id="cesiumContainer"></div>
+<div id="creditContainer"></div>
 
 <script src="GimelGimel/Utils.js"></script>
 <script src="GimelGimel/VectorLayer.js"></script>
