basic entities interaction with listeners. entities has listeners and javascript fires event when entities are been touched.

--- a/app/src/main/assets/cesiumHelloWorld.html
+++ b/app/src/main/assets/cesiumHelloWorld.html
@@ -53,6 +53,7 @@
 <script src="GimelGimel/LayersManager.js"></script>
 <script src="GimelGimel/AndroidAPI.js"></script>
 <script src="GimelGimel/CameraManager.js"></script>
+<script src="GimelGimel/CesiumEventHandler.js"></script>
 
 <!-- Needs to be called last -->
 <script src="GimelGimel/GGBootstrap.js"></script>
