--- a/app/src/main/assets/cesiumHelloWorld.html
+++ b/app/src/main/assets/cesiumHelloWorld.html
@@ -22,7 +22,7 @@
             overflow: hidden;
         }
 
-        #creditContainer{
+        #creditHiddenContainer{
             visibility: hidden;
         }
 
@@ -45,7 +45,7 @@
 </head>
 <body>
 <div id="cesiumContainer"></div>
-<div id="creditContainer"></div>
+<div id="creditHiddenContainer"></div>
 
 <script src="GimelGimel/Utils.js"></script>
 <script src="GimelGimel/VectorLayer.js"></script>
