Cesium navigation widget integration.

--- a/app/src/main/assets/cesiumHelloWorld.html
+++ b/app/src/main/assets/cesiumHelloWorld.html
@@ -11,6 +11,7 @@
     <title>Hello World!</title>
     <script src="Cesium/Cesium.js"></script>
     <script src="Libs/jquery.js"></script>
+    <script src="Libs/viewerCesiumNavigationMixin.min.js"></script>
     <style>
         @import url(Cesium/Widgets/widgets.css);
 
@@ -22,7 +23,7 @@
             overflow: hidden;
         }
 
-        #creditHiddenContainer{
+        #creditHiddenContainer {
             visibility: hidden;
         }
 
@@ -39,7 +40,6 @@
         #extra-func {
             background-color: tomato;
         }
-
 
 
     </style>
