Cesium navigation widget integration.

--- a/app/src/main/assets/cesiumHelloWorld.html
+++ b/app/src/main/assets/cesiumHelloWorld.html
@@ -41,6 +41,14 @@
             background-color: tomato;
         }
 
+        .compass {
+            left: 10px;
+        }
+
+        .distance-legend {
+            left: 5px;
+        }
+
 
     </style>
 </head>
