Resize map view on bottom panel resize events. You can now see the "center" of the map while the panel is open - meaning an entity you're focused on can be seen on goto

--- a/app/src/main/assets/cesiumHelloWorld.html
+++ b/app/src/main/assets/cesiumHelloWorld.html
@@ -42,11 +42,15 @@
         }
 
         .compass {
-            left: 10px;
+            left:10px;
+            top: 20px;
+            display: block !important;
         }
 
         .distance-legend {
-            left: 5px;
+            left:10px;
+            bottom: 20px;
+            display: block !important;
         }
 
 
